--- a/css/main.css
+++ b/css/main.css
@@ -67,16 +67,23 @@ table > tbody > tr > td.left {
 }
 
 td.up {
-  color: #DD5533;
+  /* color: #DD5533; */
 }
 
 td.down {
-  color: #4A912D;
+  /* color: #4A912D; */
 }
 
 td span.code {
-  font-size: 12px;
-  color: #333;
+  font-size: 11px;
+  color: #A8A8A8;
+}
+
+.th-title,
+.current,
+.change,
+.tickerName {
+  color: #888888;
 }
 
 #footer {
